--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "catch-safe",
+  "description": "Zero-dependency type-safe error handling utility",
   "repository": {
     "type": "git",
-    "url": "https://github.com/<username>/catch-safe"
+    "url": "https://github.com/tundera/catch-safe"
   },
   "author": {
     "name": "Your Name",
-    "url": "https://github.com/<username>",
-    "email": "<email>"
+    "url": "https://github.com/tundera",
+    "email": "tundera@gmail.com"
   },
   "version": "0.1.0",
   "license": "MIT",
@@ -42,33 +43,24 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "lint": "eslint --ext .ts,.js .",
     "lint:fix": "eslint --ext .ts,.js . --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "release": "bumpp --commit --push --tag && pnpm publish",
     "prepublishOnly": "pnpm build"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "bumpp": "7.1.1",
-    "jest": "27.5.1",
-    "ts-jest": "27.1.3",
+    "prettier": "^2.6.1",
     "tsup": "5.12.1",
-    "typescript": "4.6.2"
+    "typescript": "4.6.2",
+    "vitest": "^0.7.11"
   },
   "release": {
     "branches": [
       "+([0-9])?(.{+([0-9]),x}).x",
       "main",
-      "next",
-      "next-major",
-      {
-        "name": "beta",
-        "prerelease": true
-      },
-      {
-        "name": "alpha",
-        "prerelease": true
-      }
+      "next"
     ]
   }
 }
