--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "catch-safe",
   "description": "Zero-dependency type-safe error handling utility",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/tundera/catch-safe"
@@ -12,6 +12,7 @@
     "email": "tundera@gmail.com"
   },
   "license": "MIT",
+  "packageManager": "pnpm@7.0.0-beta.2",
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   },
@@ -40,21 +41,33 @@
   "scripts": {
     "dev": "tsup src/index.ts --format cjs,esm --watch",
     "build": "tsup src/index.ts --format cjs,esm --dts-resolve",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
-    "lint": "eslint --ext .ts,.js .",
-    "lint:fix": "eslint --ext .ts,.js . --fix",
+    "typecheck": "tsc --noEmit",
+    "lint": "TIMING=1 eslint --ext .ts,.js .",
+    "lint:fix": "TIMING=1 eslint --ext .ts,.js . --fix",
     "test": "vitest run",
     "test:watch": "vitest",
+    "clean": "rimraf dist",
     "release": "bumpp --commit --push --tag && pnpm publish",
+    "prepare": "husky install",
     "prepublishOnly": "pnpm build"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
+    "@typescript-eslint/eslint-plugin": "5.16.0",
+    "@typescript-eslint/parser": "5.16.0",
     "bumpp": "7.1.1",
-    "prettier": "^2.6.1",
+    "commitizen": "4.2.4",
+    "cz-git": "1.2.1",
+    "eslint": "8.12.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "husky": "7.0.4",
+    "lint-staged": "12.3.7",
+    "prettier": "2.6.1",
+    "pretty-quick": "3.1.3",
     "tsup": "5.12.1",
     "typescript": "4.6.2",
-    "vitest": "^0.7.11"
+    "vitest": "0.7.11"
   },
   "release": {
     "branches": [
@@ -62,5 +75,15 @@
       "main",
       "next"
     ]
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "pnpm lint --fix"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-git"
+    }
   }
 }
