--- a/package.json
+++ b/package.json
@@ -49,18 +49,20 @@
     "clean": "rimraf dist",
     "release": "bumpp --commit --push --tag && pnpm publish",
     "prepare": "husky install",
-    "prepublishOnly": "pnpm build"
+    "prepublishOnly": "pnpm build",
+    "commit": "gacp"
   },
   "devDependencies": {
+    "@commitlint/cli": "16.2.3",
+    "@commitlint/config-conventional": "16.2.1",
     "@types/node": "17.0.21",
     "@typescript-eslint/eslint-plugin": "5.16.0",
     "@typescript-eslint/parser": "5.16.0",
     "bumpp": "7.1.1",
-    "commitizen": "4.2.4",
-    "cz-git": "1.2.1",
     "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
+    "gacp": "2.10.2",
     "husky": "7.0.4",
     "lint-staged": "12.3.7",
     "prettier": "2.6.1",
@@ -81,9 +83,12 @@
       "pnpm lint --fix"
     ]
   },
-  "config": {
-    "commitizen": {
-      "path": "cz-git"
-    }
+  "gacp": {
+    "emoji": "emoji"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
