--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lint:fix": "TIMING=1 eslint --ext .ts,.js . --fix",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:ci": "cross-env CI=true pnpm test",
     "clean": "rimraf dist",
     "release": "bumpp --commit --push --tag && pnpm publish",
     "prepare": "husky install",
@@ -59,6 +60,7 @@
     "@typescript-eslint/eslint-plugin": "5.16.0",
     "@typescript-eslint/parser": "5.16.0",
     "bumpp": "7.1.1",
+    "cross-env": "7.0.3",
     "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
